--- a/statistics.html
+++ b/statistics.html
@@ -64,7 +64,7 @@
 <p>Jul 9, 2019 ... Apply online for the job of Senior Research and Statistical Analyst - Demography 
 at BAME Recruitment Limited.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/A123Systems/743999692078317-application-support-statistician'>A123 Systems Application Support Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/A123Systems/743999692078317-application-support-statistician'>A123 Systems Application Support Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -76,7 +76,7 @@ at BAME Recruitment Limited.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TTi1/743999687569952-senior-biostatistican'>TTi Senior Biostatistican | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TTi1/743999687569952-senior-biostatistican'>TTi Senior Biostatistican | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -117,7 +117,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oyrAafwt'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oyrAafwt'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -145,7 +145,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oyrAafwt'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oyrAafwt'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -187,7 +187,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/jobs/1064936'>Statistics & Data Corporation (SDC) - Jobs: Biostatistician - Apply ...</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/jobs/1064936'>Statistics & Data Corporation (SDC) - Jobs: Biostatistician - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 5, 2019 ... Apply online for the job of Biostatistician at Statistics & Data Corporation (SDC)</p>
 <hr/>
@@ -212,7 +212,7 @@ statistical aspects of study design and analysis of data from complex...</p>
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/prosidianconsulting/743999691968708-ppm-data-scientist-statistician-ii-co'>ProSidian Consulting, LLC PPM Data Scientist/Statistician II - CO | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/prosidianconsulting/743999691968708-ppm-data-scientist-statistician-ii-co'>ProSidian Consulting, LLC PPM Data Scientist/Statistician II - CO | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -233,7 +233,7 @@ statistical aspects of study design and analysis of data from complex...</p>
 <p>6 days ago ... Demonstrate expert knowledge and understanding of analysis data structure 
 standards (ADaM) and a good understanding of conversion data structure?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999691567446-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999691567446-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -257,7 +257,7 @@ standards (ADaM) and a good understanding of conversion data structure?...</p>
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://goldcorp.referrals.selectminds.com/jobs/senior-geostatistician-specialist-2041'>Senior Geostatistician Specialist - Goldcorp Careers</a></h5> 
+<h5><a href='https://goldcorp.referrals.selectminds.com/jobs/senior-geostatistician-specialist-2041'>Senior Geostatistician Specialist - Goldcorp Careers</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -290,7 +290,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/system1/35ce88c9-5222-4c39-aa8e-0ad2c7e900a4/apply'>System1 - Principal Data Scientist - Statistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/system1/35ce88c9-5222-4c39-aa8e-0ad2c7e900a4/apply'>System1 - Principal Data Scientist - Statistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Principal Data Scientist - Statistician. Venice, CA. Data Science. Full-time. Submit 
 your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read?...</p>
@@ -309,7 +309,7 @@ in SAS, R, Python). ? Experience with CDISC data format (SDTM and ADAM).</p>
 <p>2 days ago ... Senior Statistical Programmer. Overview: Provides statistical programming 
 support for the implementation of data models and the reporting of clinical trials?...</p>
 <hr/>
-<h5><a href='https://uscareers-prahs.icims.com/jobs/54097/biostatistics-asset-lead/job'>Biostatistics Asset Lead in</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54097/biostatistics-asset-lead/job'>Biostatistics Asset Lead in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 4, 2019 ... Serves as an independent reporting statistician on data monitoring committees. 
 Develops statistical analysis plans and reporting specifications for simple to?...</p>
@@ -337,7 +337,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://atasssports.recruitee.com/o/research-statistician-exeter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atasssports.recruitee.com/o/research-statistician-exeter'>
       Research Statistician - ATASS Sports
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -385,7 +385,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999691191098-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999691191098-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
@@ -463,7 +463,7 @@ statistical?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29858'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29858'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
